# speedtest-fileserver-rs

./: .gitignore  Cargo.toml  LICENSE.md  README.debian.md  README.md  README.rpm.md  speedtest-fileserver.cfg
.rpm/: speedtest-fileserver.spec
debian/: changelog  control  copyright  dirs  examples  init  install  logrotate  rules  service
debian/source/: options
examples/: nginx-proxy.conf
src/: index.hbs  index.html  lehmer64.rs  logger.rs  main.rs  randomstream.rs  remoteip.rs  server.rs  template.rs
