[package]
name = "speedtest-fileserver-rs"
version = "1.2.0"
authors = ["mikevs <mikevs@xs4all.net>"]
edition = "2018"
description = "Speedtest fileserver"
license = "MIT"

[dependencies]
async-stream = "0.3.0"
bytes = "1.0.1"
chrono = { version = "0.4.19", default-features = false, features = [ "alloc", "clock" ] }
curlyconf = "0.1.0"
env_logger = "0.8.2"
futures = "0.3.12"
http = "0.2.3"
handlebars = "3.5.2"
hyper = "0.14.2"
human-size = "0.4.1"
log = "0.4.13"
once_cell = "1.5.2"
rand = "0.8.2"
rand_core = "0.6.1"
serde = { version = "1.0.120", features = [ "derive" ] }
structopt = "0.3.21"
tokio = { version = "1.0.2", features = [ "full" ] }
tokio-stream = "0.1"
warp = { version = "0.3.0", default-features = false, features = [ "tls" ] }
woothee = "0.11.0"

[package.metadata.rpm]
package = "speedtest-fileserver"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
speedtest-fileserver-rs = { path = "/usr/sbin/speedtest-fileserver-rs" }

[package.metadata.rpm.files]
"../debian/service" = { path = "/usr/lib/systemd/system/speedtest-fileserver.service", mode = "644" }
"../debian/logrotate" = { path = "/etc/logrotate.d/speedtest-fileserver.conf", mode = "644" }
"../speedtest-fileserver.cfg" = { path = "/etc/speedtest-fileserver.cfg", mode = "644" }
